2007-01-03 Bernhard Held <bernhard AT bernhardheld.de>

	* configure.in: added missing mcs51 in status output
	* Makefile.in: add support/regression to SDCC_EXTRA to distclean this
	directory
	* debugger/mcs51/clean.mk (distclean): remove config.h
	* src/clean.mk (clean): remove SDCCy.c, SDCCy.h, SDCClex.c
	* support/cpp2/Makefile.in (clean): remove s-options, optionlist,
	options.h, s-options-h and options.c
	* support/cpp2/clean.mk: unused, removed
	* Makefile.common.in,
	* main_in.mk,
	* as/Makefile.in,
	* as/hc08/Makefile.in,
	* as/hc08/clean.mk,
	* as/mcs51/Makefile.in,
	* as/mcs51/clean.mk,
	* as/z80/clean.mk,
	* as/z80/conf.mk,
	* as/z80/Makefile.in,
	* as/z80/clean.mk,
	* as/link/Makefile.in,
	* as/link/hc08/Makefile.in,
	* as/link/hc08/clean.mk,
	* as/link/mcs51/Makefile.in,
	* as/link/mcs51/clean.mk,
	* as/link/z80/Makefile.in,
	* as/link/z80/clean.mk,
	* as/link/z80/conf.mk,
	* debugger/mcs51/Makefile.in,
	* debugger/mcs51/clean.mk,
	* device/include/Makefile.in,
	* device/lib/Makefile.in,
	* device/lib/mcs51/Makefile.in,
	* device/lib/pic/Makefile.in,
	* device/lib/pic/Makefile.common.in,
	* device/lib/pic/Makefile.subdir,
	* device/lib/pic/Makefile.rules,
	* device/lib/pic16/libio/Makefile.in,
	* device/lib/pic16/Makefile.subdir,
	* device/lib/pic16/libdev/Makefile.in,
	* device/lib/pic16/Makefile.rules,
	* device/lib/pic16/Makefile.common.in,
	* sim/ucsim/avr.src/Makefile.in,
	* sim/ucsim/main_in.mk,
	* sim/ucsim/cmd.src/Makefile.in,
	* sim/ucsim/doc/Makefile.in,
	* sim/ucsim/gui.src/Makefile.in,
	* sim/ucsim/gui.src/obsolete/portmon.src/Makefile.in,
	* sim/ucsim/gui.src/serio.src/Makefile.in,
	* sim/ucsim/hc08.src/Makefile.in,
	* sim/ucsim/libltdl/Makefile.in,
	* sim/ucsim/s51.src/Makefile.in,
	* sim/ucsim/sim.src/Makefile.in,
	* sim/ucsim/sim.src/conf.mk,
	* sim/ucsim/xa.src/Makefile.in,
	* sim/ucsim/z80.src/Makefile.in,
	* src/Makefile.in,
	* src/clean.mk,
	* src/port.mk,
	* support/cpp2/Makefile.in,
	* support/librarian/Makefile.in,